--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,7 @@ test:
   database: 
 
 production:
-  <<: *default
-  database: 
+  adapter: postgresql
+  encoding: unicode
+  database: gifts_shop_production
+  pool: 5 
